--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"test": "echo \"Error: no test specified\" && exit 1",
-	"compile:scss": "node-sass resources/scss/main.scss public/style.css -w"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile:scss": "node-sass resources/scss/main.scss public/style.css -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
+    "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1"
   }
 }
