--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "42lo",
   "version": "1.0.0",
-  "description": "",
+  "description": "Strona samorządu 42 LO",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,6 +18,7 @@
     "jquery": "^3.5.1",
     "node-sass": "^5.0.0",
     "nodemailer": "^6.4.14",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "pug": "^3.0.0"
   }
 }
