--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "jstransformer-markdown-it": "^2.1.0",
     "node-sass": "^5.0.0",
     "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
