--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^5.0.0",
     "nodemailer": "^6.4.14",
     "popper.js": "^1.16.1",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "require-text": "0.0.1"
   }
 }
