--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "jquery": "^3.5.1",
     "jstransformer-markdown-it": "^2.1.0",
     "node-sass": "^5.0.0",
+    "nodemailer": "^6.4.16",
     "popper.js": "^1.16.1",
     "pug": "^3.0.0",
-    "require-text": "0.0.1",
-    "sendmail": "^1.6.1"
+    "require-text": "0.0.1"
   }
 }
